fix typo in sys_index.ejs

--- a/views/sys_index.ejs
+++ b/views/sys_index.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/user.css"/>
     <link rel="shortcut icon" href="/favicon.ico"/>
     <link rel="bookmark" href="/favicon.ico"/>
-    <title>sys index</title>
+    <title>My ABC admin dashboard</title>
 </head>
 <body>
 <div class="sys_header">
